@@ -61,5 +61,6 @@ rb_call_inits(void)
     CALL(Complex);
     CALL(version);
     CALL(vm_trace);
+    CALL(sizes);
 }
 #undef CALL
